# chess

./: .dockerignore  README.md  spec.yaml
app/: .env  package-lock.json  package.json  tailwind.config.js
app/src/: App.css  App.tsx  chess.ts  chess_engine.ts  index.css  types.ts  utils.ts
app/src/containers/chess/: index.tsx
app/src/containers/chess/board/: index.tsx
app/src/stores/: chess.ts
app/src/ui/board/: index.tsx
app/src/ui/modal/: index.tsx
app/src/ui/piece/: index.tsx
app/src/ui/promotion/: index.tsx
app/src/websocket/: client.ts  type.ts
backend/: .gitignore  Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/configs/: base.yaml
backend/src/: chess_server.rs  config.rs  game_action.rs  game_command.rs  lib.rs  main.rs  session.rs  types.rs  websocket_server.rs
backend/src/websocket/: messages.rs  mod.rs  server.rs  session.rs
backend/src/websocket/servers/: in_memory.rs  mod.rs  redis.rs
chess-client/: vite.config.ts
chess-client/src/: App.tsx  index.css  main.tsx  types.ts
chess-client/src/stores/: dnd.ts
shared/: game_action.json
