[package]
name = "chess-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chess_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
async-stream = "0.3.5"
config = "0.13.3"
futures-util = "0.3.28"
nanoid = "0.4.0"
once_cell = "1.18.0"
serde = {version = "1.0.181", features=["derive"]}
serde-aux = "4.2.0"
serde_json = "1.0.104"
tokio = {version = "1.29.1", features=["full"]}
uuid = {version = "1.4.1", features=["v4", "serde"]}
